--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello!
+<h1>Hello! This is my website!</h1>
+
+<p>I'm <strong>Violet</strong>. Nice to e-meet you!</p>
+
+I'm from <em>Thailand</em>. I was in <em>consulting</em> prior to Kellogg.
+
+<p>Please see my LinkedIn profile <a href = "https://www.linkedin.com/in/thitirat-sirikajornkij/"><strong>HERE</strong></a></p>
+
+<p>Here is how I look like hehe:</p>
+
+<img src="Thitirat Sirikajornkij_White BG Photo.jpg">
+
+<p>Three words that best describe me</p>
+<ul>
+    <li>Cute</li>
+    <li>Cute</li>
+    <li>AND Cute!!!</li>
+</ul>
+
+<p>Please find my favorite activities in this <a href = hobby.html>LINK</a></p>
