--- a/hobby.html
+++ b/hobby.html
@@ -1,1 +1,16 @@
-<strong>Just kidding! There is nothing here! Please go back to <a href = index.html>the last page</a></strong>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+
+    <strong>Just kidding! There is nothing here! Please go back to <a href = index.html>THE LAST PAGE.</a></strong>
+
+
+</body>
+</html>
+
