--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+
 <h1>Hello! This is my website!</h1>
 
 <p>I'm <strong>Violet</strong>. Nice to e-meet you!</p>
@@ -18,3 +28,7 @@ I'm from <em>Thailand</em>. I was in <em>consulting</em> prior to Kellogg.
 </ul>
 
 <p>Please find my favorite activities in this <a href = hobby.html>LINK</a></p>
+
+
+</body>
+</html>
